--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/tfs?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/tqt?characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: 1234
-    driver-class-name: com.mysql.jdbc.Driver
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    default-property-inclusion: non_null
 mybatis:
+  type-aliases-package: com.yaorange.tqt.pojo
   configuration:
     map-underscore-to-camel-case: true
