--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/tfs?characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: 1234
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   configuration:
